docs/content/v2.25/manage/_index.md
---
title: Manage YugabyteDB
headerTitle: Manage YugabyteDB
linkTitle: Manage
description: Managing YugabyteDB deployments
headcontent: Manage your YugabyteDB deployment
menu:
  v2.25:
    identifier: manage
    parent: launch-and-manage
    weight: 50
type: indexpage
---

{{<index/block>}}

  {{<index/item
    title="Back up and restore"
    body="Back up and restore data in YugabyteDB."
    href="backup-restore/"
    icon="fa-thin fa-life-ring">}}

  {{<index/item
    title="Migrate data"
    body="Bulk data export and import in the context of YugabyteDB."
    href="data-migration/"
    icon="fa-thin fa-file-import">}}

  {{<index/item
    title="Change cluster configuration"
    body="Move universe data to a new set of machines."
    href="change-cluster-config/"
    icon="fa-thin fa-circle-nodes">}}

  {{<index/item
    title="Upgrade a deployment"
    body="Upgrade the YugabyteDB software."
    href="upgrade-deployment/"
    icon="fa-thin fa-arrow-up-to-line">}}

  {{<index/item
    title="Diagnostics reporting"
    body="Configure collection and reporting of diagnostics data."
    href="diagnostics-reporting/"
    icon="fa-thin fa-stethoscope">}}

{{</index/block>}}
