docs/content/v2024.1/manage/_index.md
---
title: Manage YugabyteDB
headerTitle: Manage YugabyteDB
linkTitle: Manage
description: Manging YugabyteDB deployments
image: /images/section_icons/quick_start/sample_apps.png
headcontent: Manage your YugabyteDB deployment
menu:
  v2024.1:
    identifier: manage
    parent: launch-and-manage
type: indexpage
---

{{<index/block>}}

  {{<index/item
    title="Back up and restore"
    body="Back up and restore data in YugabyteDB."
    href="backup-restore/"
    icon="fa-light fa-life-ring">}}

  {{<index/item
    title="Migrate data"
    body="Bulk data export and import in the context of YugabyteDB."
    href="data-migration/"
    icon="/images/section_icons/index/deploy.png">}}

  {{<index/item
    title="Change cluster configuration"
    body="Move universe data to a new set of machines."
    href="change-cluster-config/"
    icon="/images/section_icons/deploy/enterprise/administer.png">}}

  {{<index/item
    title="Upgrade a deployment"
    body="Upgrade the YugabyteDB software."
    href="upgrade-deployment/"
    icon="/images/section_icons/deploy/enterprise/administer.png">}}

  {{<index/item
    title="Diagnostics reporting"
    body="Configure collection and reporting of diagnostics data."
    href="diagnostics-reporting/"
    icon="/images/section_icons/manage/diagnostics.png">}}

{{</index/block>}}
